objects/Account_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Account_Partner__c</fullName>
        <label>Account Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Account Partners</relationshipLabel>
        <relationshipName>Account_Partners</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Partners</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <label>Partner Role</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Dealer</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Partner</label>
    <nameField>
        <label>Account Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>